--- a/jmtesting/multilingual/test-page/css-demo.html
+++ b/jmtesting/multilingual/test-page/css-demo.html
@@ -19,16 +19,16 @@
         <link href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" />
 
-		<!-- Load the font stylesheets (remove preload for now) -->
-		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Canadian+Aboriginal:wght@400;700&display=swap" rel="stylesheet">
+		<!-- Load the font stylesheets -->
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet"> -->
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Canadian+Aboriginal:wght@400;700&display=swap" rel="stylesheet"> 
         <noscript><link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/css/noscript.min.css" /></noscript>
     </head>
 
 	<style>
 		h1, h2, h3, h4, h5, h6 {
-			font-family: 'Lato', 'Noto Sans', 'Noto Sans Canadian Aboriginal', serif !important;
+			font-family: 'Lato', 'Noto Sans', 'Noto Sans Canadian Aboriginal', sans-serif !important;
 		}
 
 		body {
@@ -107,13 +107,14 @@
 	</section>
 </section>
 
-<!-- Noto Sans heading & paragraph -->
-<section><h2>Επικεφαλίδα 2 (<code>h2</code>) - την προεπιλεγμένη εμφάνιση του</h2>
-	<section><h3>Επικεφαλίδα 3 (<code>h3</code>) - την προεπιλεγμένη εμφάνιση του</h3>
-		<section><h4>Επικεφαλίδα 4 (<code>h4</code>) - την προεπιλεγμένη εμφάνιση του</h4>
-			<section><h5>Επικεφαλίδα 5 (<code>h5</code>) - την προεπιλεγμένη εμφάνιση του</h5>
-				<section><h6>Επικεφαλίδα 6 (<code>h6</code>) - την προεπιλεγμένη εμφάνιση του</h6>
-					<p>Παράγραφος την προεπιλεγμένη εμφάνιση του</p>
+<!-- Lato headings, Noto Sans paragraph -->
+
+<section><h2>En-tête 2 (<code>h2</code>) - apparence par défaut</h2>
+	<section><h3>En-tête 3 (<code>h3</code>) - apparence par défaut</h3>
+		<section><h4>En-tête 4 (<code>h4</code>) - apparence par défaut</h4>
+			<section><h5>En-tête 5 (<code>h5</code>) - apparence par défaut</h5>
+				<section><h6>En-tête 6 (<code>h6</code>) - apparence par défaut</h6>
+					<p>Paragraphe apparence par défaut</p>
 				</section>
 			</section>
 		</section>
@@ -139,38 +140,6 @@
 </section>
 
 
-<!-- Lato headings, paragraph defaults to local file -->
-<section>
-<h2>見出し&#173;2&#173;(<code>h2</code>)</h2>
-<section>
-<h3>見出し&#173;3&#173;(<code>h3</code>)</h3>
-<section>
-<h4>見出し&#173;4&#173;(<code>h4</code>)</h4>
-<section>
-<h5>見出し&#173;5&#173;(<code>h5</code>)</h5>
-<section>
-<h6>見出し&#173;6&#173;(<code>h6</code>)</h6>
-<p>段落-デフォルトの外観</p>
-</section>
-</section>
-</section>
-</section>
-</section>
-
-<!-- Local file heading & paragraph -->
-<div dir="rtl">
-<section><h2>رؤوس أقلام 2 (<code>h2</code>) - مظهر الافتراضي</h2>
-	<section><h3>رؤوس أقلام 3 (<code>h3</code>) - مظهر الافتراضي</h3>
-		<section><h4>رؤوس أقلام 4 (<code>h4</code>) - مظهر الافتراضي</h4>
-			<section><h5>رؤوس أقلام 5 (<code>h5</code>) - مظهر الافتراضي</h5>
-				<section><h6>رؤوس أقلام 6 (<code>h6</code>) - مظهر الافتراضي</h6>
-					<p>فقرة مظهر الافتراضي</p>
-				</section>
-			</section>
-		</section>
-	</section>
-</section>
-</div>
 
             <section class="pagedetails container">
                 <h2 class="wb-inv">Page details</h2>
