--- a/jmtesting/multilingual/test-page/css-demo.html
+++ b/jmtesting/multilingual/test-page/css-demo.html
@@ -93,51 +93,43 @@
 
 <h1 property="name" id="wb-cont" dir="ltr">Demo for multilingual font support</h1>
 
-<!-- Lato headings, Noto Sans paragraph -->
+<!-- English: Lato headings, Noto Sans paragraph: latin character demo -->
 <section>
 	<h2>Heading 2 (<code>h2</code>) - default appearance</h2>
-	<section><h3>Heading 3 (<code>h3</code>) - default appearance</h3>
-		<section><h4>Heading 4 (<code>h4</code>) - default appearance</h4>
-			<section><h5>Heading 5 (<code>h5</code>) - default appearance</h5>
-				<section><h6>Heading 6 (<code>h6</code>) - default appearance</h6>
-					<p>Paragraph default appearance</p>
-				</section>
-			</section>
-		</section>
-	</section>
+	<p>Paragraph default appearance</p>
 </section>
 
-<!-- Lato headings, Noto Sans paragraph -->
-
-<section><h2>En-tête 2 (<code>h2</code>) - apparence par défaut</h2>
-	<section><h3>En-tête 3 (<code>h3</code>) - apparence par défaut</h3>
-		<section><h4>En-tête 4 (<code>h4</code>) - apparence par défaut</h4>
-			<section><h5>En-tête 5 (<code>h5</code>) - apparence par défaut</h5>
-				<section><h6>En-tête 6 (<code>h6</code>) - apparence par défaut</h6>
-					<p>Paragraphe apparence par défaut</p>
-				</section>
-			</section>
-		</section>
-	</section>
+<!-- French: Lato headings, Noto Sans paragraph: latin character demo -->
+<section>
+	<h2>En-tête 2 (<code>h2</code>) - apparence par défaut</h2>
+	<p>Paragraphe apparence par défaut</p>
 </section>
 
-<!-- Noto Sans Indigenous heading & paragraph -->
+<!-- Inuktitut: Noto Sans Canadian Aboriginal heading & paragraph: indigenous character demo -->
 <section>
-<h2>ᐅᓂᒃᑳᓕᐊᑉᑕᐃᔭᐅᓂᖓ&#32;2&#32;(<code>h2</code>)</h2>
+	<h2>ᐅᓂᒃᑳᓕᐊᑉᑕᐃᔭᐅᓂᖓ 2 (<code>h2</code>)</h2>
+	<p>ᐅᖃᐅᓯᑯᑖᒐᒃᓴᑦ - ᑕᐅᑦᑐᖓᐋᖅᑭᒃᐸᒌᖅᓯᒪᔪᖅ</p>
+</section>
+
+<!-- Plains Cree: Noto Sans Canadian Aboriginal heading & paragraph: indigenous character demo -->
 <section>
-<h3>ᐅᓂᒃᑳᓕᐊᑉᑕᐃᔭᐅᓂᖓ&#32;3&#32;(<code>h3</code>)</h3>
+	<h2>ᐃᑗᐏᐣ 2 (<code>h2</code>) - ᑭᓯᑲᐧᐣ ᐊᑕᐧᐦᐃᑲᐣ</h2>
+	<p>ᐸᐦᑫᑭᐣ ᑭᓯᑲᐧᐣ ᐊᑕᐧᐦᐃᑲᐣ</p>
+</section>
+
+<!-- Ojibwe: Noto Sans Canadian Aboriginal heading & paragraph: indigenous character demo -->
 <section>
-<h4>ᐅᓂᒃᑳᓕᐊᑉᑕᐃᔭᐅᓂᖓ&#32;4&#32;(<code>h4</code>)</h4>
+	<h2>ᐅᓂᔑᓂᒧᐏᐣ 2 (<code>h2</code>) - ᒥᓇᐊᔨᐧᐃᐧᐣ</h2>
+	<p>ᐃᑭᑎᐎᐣ ᒥᓇᐊᔨᐧᐃᐧᐣ ᐁᓇᑯᓂᑲᑌᐠ</p>
+</section>
+
+<!-- Northern East Cree: Noto Sans Canadian Aboriginal heading & paragraph: indigenous character demo -->
 <section>
-<h5>ᐅᓂᒃᑳᓕᐊᑉᑕᐃᔭᐅᓂᖓ&#32;5&#32;(<code>h5</code>)</h5>
-<section>
-<h6>ᐅᓂᒃᑳᓕᐊᑉᑕᐃᔭᐅᓂᖓ&#32;6&#32;(<code>h6</code>)</h6>
-<p>ᐅᖃᐅᓯᑯᑖᒐᒃᓴᑦ - ᑕᐅᑦᑐᖓᐋᖅᑭᒃᐸᒌᖅᓯᒪᔪᖅ</p>
+	<h2>ᐄᔨᔫ ᐊᔨᒧᐎᓐ 2 (<code>h2</code>)</h2>
+	<p>ᒫᒃ ᑳ ᐄᔑ ᐊᔨᒧᔮᓐ ᐄᔨᔫ ᐊᔨᒧᐎᓐ</p>
 </section>
-</section>
-</section>
-</section>
-</section>
+
+
 
 
 
