Update archived page heading for clarity

--- a/chelsey/design/can-us.html
+++ b/chelsey/design/can-us.html
@@ -13,7 +13,7 @@ pageclass: cnt-wdth-lmtd
 title: "Archived: [Page title]"
 ---
 <section class="alert alert-warning">
- <h3>Archived: This page is provided for historical purposes</h3>
+ <h3>Archived information</h3>
  <p>This information has been archived and is provided for reference only. <strong>It may no longer be correct.</strong> The content has not been altered or updated since it was archived. </p>
 </section>
 <section class="gc-most-requested">
