--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band.html
@@ -540,7 +540,7 @@
             <div class="container">
                 <div class="aa-content">
                     <div class="aa-icon">
-                        <img src="../img/AI-stars.png" alt="AI stars icon" />
+                        <img src="../img/AI-stars.png" alt="AI stars icon" alt="" />
                     </div>
                     <div class="aa-text">
                         <h2 class="wb-inv">Try AI Answers</h2>
