--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -147,7 +147,7 @@
     <div class="container">
         <ul class="list-inline mrgn-bttm-sm">
             <li>
-                <img src="../img/AI-stars-30.png" />
+                <img src="../img/AI-stars-30.png" alt="" />
             </li>
             <li>
                 <header class="p-0"><h2 class="modal-title">Besoin d'aide&nbsp;?</h2></header>
