--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
@@ -537,7 +537,7 @@
             <div class="container">
                 <div class="aa-content">
                     <div class="aa-icon">
-                        <img src="../img/AI-stars.png" />
+                        <img src="../img/AI-stars.png" alt="" />
                     </div>
                     <div class="aa-text">
                         <h2 class="wb-inv">Essayez Réponses IA</h2>
