--- a/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-custom.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-custom.html
@@ -393,7 +393,7 @@
             <div class="container">
                 <div class="aa-content">
                     <div class="aa-icon">
-                        <img src="../../img/AI-stars.png" />
+                        <img src="../../img/AI-stars.png" alt="" />
                     </div>
                     <div class="aa-text">
                         <h2 class="wb-inv">Try AI Answers</h2>
