--- a/jmtesting/multilingual/test-page/css-demo.html
+++ b/jmtesting/multilingual/test-page/css-demo.html
@@ -21,7 +21,7 @@
 
 		<!-- Load the font stylesheets -->
 		<!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">  -->
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&subset=latin,latin-ext,cyrillic,cyrillic-ext&display=swap" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&subset=latin,latin-ext,cyrillic,cyrillic-ext&display=swap" rel="stylesheet"> -->
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Canadian+Aboriginal:wght@400;700&display=swap" rel="stylesheet"> 
         <noscript><link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/css/noscript.min.css" /></noscript>
     </head>
