--- a/jmtesting/ai-answers/local-copy/ai-answers-chat.html
+++ b/jmtesting/ai-answers/local-copy/ai-answers-chat.html
@@ -390,8 +390,15 @@ hr {
 			<div class="container">
 				<!-- Custom code starts here --><h1 property="name" id="wb-cont" property="name headline" dir="ltr">AI answers
 				</h1><!-- Custom code ends here -->
-<p><mark>Testing when preview is broken</mark></p>
+<h2 class="h4">Get answers to your Canada.ca questions.</h2>
+<p>Answers provided by this AI service are information, not official advice. Improvements are ongoing.</p>
+<p><mark>Privacy and AI terms of use</mark></p>
 
+<div class="mistake-disc col-md-12" style="font-size: 16px;">
+                    <p><b>Page you were on</b>: https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/eta/after-apply-next-steps.html
+                    </p>
+				</div>
+<div class="clearfix"></div>
 <form class="mrgn-tp-xl mrgn-bttm-lg">
     <div class="field-container">
 		<label for="message">Ask a Canada.ca question</label>
@@ -414,7 +421,7 @@ hr {
 		</div>
 	  </div>
   </form>
-  <div class="chat-container">
+  <!-- <div class="chat-container">
     <div class="message-list">
         <div class="message user">
             <div class="user-message-box"><p class="">can i renew a passport online now?</p></div>
@@ -458,23 +465,23 @@ hr {
             </div>
 			<hr>
         </div>
-    </div>
+    </div> -->
      <!-- Accessible Scroll Down Button -->
-    <button 
+    <!-- <button 
         class="scroll-down-btn" 
         aria-label="Scroll down to view more content"
         title="Scroll down"
         type="button"
     >
        	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
-            <!-- Circle outline matching button size -->
+           Circle outline matching button size 
             <circle cx="12" cy="12" r="11" fill="none" stroke="currentColor" stroke-width="1.5"/>
-            <!-- Down arrow with top line -->
+             Down arrow with top line 
             <path d="M12 7 L12 15 M8 13 L12 17 L16 13" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
     </button>
-</div>
-<form class="mrgn-bttm-lg">
+</div> -->
+<!-- <form class="mrgn-bttm-lg">
     <div class="field-container">
 		<label for="message">Ask a follow-on question or reply</label>
 		<span class="hint-text"><i class="fa-solid fa-wand-magic-sparkles"></i> Hint: Add details. AI can make mistakes, always check your answer.</span>
@@ -495,7 +502,8 @@ hr {
 		  <span class="char-counter" id="charCount">0/400</span>
 		</div>
 	  </div>
-  </form>
+  </form> -->
+  <p class="mrgn-bttm-xl mrgn-tp-xl">AI Answers is designed, operated and maintained by the Canadian Digital Service. <a href="">Learn more about AI Answers</a></p>
 </div>
 </main>
 
