--- a/jmtesting/ai-answers/local-copy/ai-answers-chat.html
+++ b/jmtesting/ai-answers/local-copy/ai-answers-chat.html
@@ -393,6 +393,7 @@ hr {
 			padding: 0.25em 0.5em;
 			color: #333;
 			display: block;
+			margin-bottom: 24px;
 
 		}
 		.field-container:focus-within .referring-url, 
@@ -415,9 +416,9 @@ hr {
 <form class="mrgn-tp-xl mrgn-bttm-lg">
     <div class="field-container">
 		<label for="message">Ask a Canada.ca question</label>
-		<span class="hint-text" style="padding-bottom: 24px !important;"><i class="fa-solid fa-wand-magic-sparkles"></i> Hint: Add details. AI can make mistakes, always check your answer.</span>
+		<span class="hint-text"><i class="fa-solid fa-wand-magic-sparkles"></i> Hint: Add details. AI can make mistakes, always check your answer.</span>
 		<span class="referring-url" id="displayReferringURL"></span>
-		<div class="form-group" style="margin-top: 24px;">
+		<div class="form-group">
 		  <textarea 
 			id="message" 
 			name="message" 
