--- a/jmtesting/button-alignment/buttons-styled-gcds.html
+++ b/jmtesting/button-alignment/buttons-styled-gcds.html
@@ -137,6 +137,9 @@
 
     /* final colours will be decided when GCDS releases new colour scale, so check in at that time */
 
+    .btn.active {
+        box-shadow: none !important;
+    }
     .input-group-btn .btn {
         height: 20px !important;
         font-size: 20px !important;
