--- a/chelsey/design/bilingual_404.html
+++ b/chelsey/design/bilingual_404.html
@@ -212,7 +212,7 @@
                     <p><span class="label label-danger">Erreur 404</span></p>
                     <p class="hidden-xl hidden-md hidden-lg"><a href="#en">Go to the English version</a></p>
                     <p>La page que vous souhaitez consulter a peut-être été déplacée ou supprimée. Assurez-vous que l’adresse Web (URL) est exacte. N’incluez pas de caractères spéciaux ni d’espaces dans l’URL.</p>
-                    <p>Vous cherchez peut-être l’une des pages suivantes :</p>
+                    <p>Vous cherchez peut-être l’une des pages suivantes&nbsp;:</p>
                     <ul>
                         <li><a href="https://www.canada.ca/fr.html">Page d'accueil de Canada.ca</a></li>
                         <li><a href="https://www.canada.ca/fr/services.html">Services du gouvernement du Canada</a></li>
