feat: link for screenshot

--- a/chelsey/design/404_en.html
+++ b/chelsey/design/404_en.html
@@ -22,4 +22,4 @@ title: "Page not found"
 <li><a href="https://www.canada.ca/en/services/benefits.html">Benefits</a></li>
 <li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
 <li><a href="https://www.canada.ca/en/services/immigration-citizenship.html">Visit or immigrate to Canada</a></li>
-<li><a href="">Search Canada.ca</a></li>
+<li><a href="/en/sr/srb.html">Search Canada.ca</a></li>
