--- a/chelsey/design/404_fr.html
+++ b/chelsey/design/404_fr.html
@@ -22,5 +22,5 @@ title: "Page non trouvée"
 <li><a href="https://www.canada.ca/fr/services/prestations.html">Prestations</a></li>
 <li><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></li>
 <li><a href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Immigration ou citoyenneté Canada</a></li>
-<li><a href="">Rechercher dans Canada.ca</a></li>
+<li><a href="/fr/sr/srb.html">Rechercher dans Canada.ca</a></li>
 </ul>
