--- a/jmtesting/multilingual/designs/demo-3-common.html
+++ b/jmtesting/multilingual/designs/demo-3-common.html
@@ -891,9 +891,9 @@
             </dl>
 
             <section class="pagedetails container row">
-                <h2 class="wb-inv">Page details | Détails de la page</h2>
+                <h2 class="wb-inv">Page details</h2>
                 <dl id="wb-dtmd">
-                    <dt>Date modified | Date de modification &nbsp;:</dt>
+                    <dt>Date modified:</dt>
                     <dd><time property="dateModified">2025-09-16</time></dd>
                 </dl>
             </section>
@@ -905,21 +905,16 @@
             <div class="gc-sub-footer">
                 <div class="container d-flex align-items-center">
                     <nav>
-                        <h3 class="wb-inv">Government of Canada Corporate | Organisation du gouvernement du Canada</h3>
+                        <h3 class="wb-inv">Government of Canada Corporate/h3>
                         <ul>
                             <li>
-                                <a href="https://www.canada.ca/en/government/about.html">About Canada.ca</a> |
-                                <a href="https://www.canada.ca/fr/gouvernement/a-propos-canada-ca.html"
-                                    >À propos de Canada.ca</a
-                                >
+                                <a href="https://www.canada.ca/en/government/about.html">About Canada.ca</a>
                             </li>
                             <li>
-                                <a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a> |
-                                <a href="/fr/transparence/avis.html">Avis</a>
+                                <a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a>
                             </li>
                             <li>
-                                <a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a> |
-                                <a href="/fr/transparence/confidentialite.html">Confidentialité</a>
+                                <a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a>
                             </li>
                         </ul>
                     </nav>
