--- a/jmtesting/multilingual/designs/demo.html
+++ b/jmtesting/multilingual/designs/demo.html
@@ -888,7 +888,7 @@
             <div class="gc-sub-footer">
                 <div class="container d-flex align-items-center">
                     <nav>
-                        <h3 class="wb-inv">Government of Canada Corporate/h3>
+                        <h3 class="wb-inv">Government of Canada Corporate</h3>
                         <ul>
                             <li>
                                 <a href="https://www.canada.ca/en/government/about.html">About Canada.ca</a>
