--- a/jmtesting/layered-theme-refinement/ly-features-3-outside.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3-outside.html
@@ -17,28 +17,7 @@
 <meta name="dcterms.issued" content=""/>
 <meta name="dcterms.modified" content="2024-06-10"/>
 
-<style>
-	.page-type-theme #gridContainer > nav + section h1#wb-cont {
-    font-size: 29px !important;
-	}
 
-	@media screen and (max-width: 991px) {
-    .page-type-theme #gridContainer > nav + section h1#wb-cont {
-        font-size: 26px !important;
-    }
-}
-
-.page-type-theme #gridContainer > nav + section .gc-most-requested h2 {
-    font-size: 24px !important;
-}
-
-@media screen and (max-width: 991px) {
-   .page-type-theme #gridContainer > nav + section .gc-most-requested h2 {
-        font-size: 20px !important;
-    }
-}
-
-</style>
 
 <link href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" />
@@ -161,11 +140,11 @@
 	</nav>
 	<section>
 		<div class="container">
-			<h1 id="wb-cont">Jobs</h1>
+			<h1 id="wb-cont" class="h3">Jobs</h1>
 		</div>
 		<section class="gc-most-requested">
 			<div class="container">
-				<h2>Most requested</h2>
+				<h2 class="h5">Most requested</h2>
 				<ul>
 					<li><a href="http://canada.ca/en/employment-social-development/services/my-account.html">View your records of employment</a></li>
 					<li><a href="http://canada.ca/en/employment-social-development/services/sin.html">Apply for a Social Insurance Number (SIN)</a></li>
