feat: test design

--- a/jmtesting/change-address/change-address-2.html
+++ b/jmtesting/change-address/change-address-2.html
@@ -276,6 +276,7 @@ Change your address with the Government of Canada</h1>
 				<h3 class="h6 mrgn-tp-0"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/change-your-address.html">Individual taxes and tax credits</a></h3>
 			</div>
 			<div class="col-md-6">
+            <p>Changes your address for:</p>
 				<ul>
 					<li>Canada Child Benefit</li>
 					<li>Income tax status</li>
@@ -290,6 +291,7 @@ Change your address with the Government of Canada</h1>
 				<h3 class="h6 mrgn-tp-0"><a href="/en/employment-social-development/services/my-account/personal-information.html">Service Canada programs</a></h3>
 			</div>
 			<div class="col-md-6">
+            <p>Changes your address for:</p>
 				<ul>
 					<li>Employment Insurance (EI)</li>
 					<li>Canada Pension Plan (CPP)</li>
@@ -305,6 +307,7 @@ Change your address with the Government of Canada</h1>
 				<h3 class="h6 mrgn-tp-0"><a href="/en/revenue-agency/services/tax/businesses/topics/business-registration/maintain-business/change-address.html">Business taxes</a></h3>
 			</div>
 			<div class="col-md-6">
+               <p>Changes your address for:</p>
 				<ul>
 					<li>GST/HST</li>
 					<li>Payroll</li>
@@ -316,6 +319,7 @@ Change your address with the Government of Canada</h1>
 				<h3 class="h6 mrgn-tp-0"><a href="/en/immigration-refugees-citizenship/services/application/change-address.html">Citizenship and immigration applications in progress</a></h3>
 			</div>
 			<div class="col-md-6">
+             <p>Changes your address for:</p>
 				<ul>
 					<li>Work permit</li>
 					<li>Study permit</li>
