--- a/jmtesting/ai-answers/ai-launch-sticky-bttm-band-with-rescue.html
+++ b/jmtesting/ai-answers/ai-launch-sticky-bttm-band-with-rescue.html
@@ -404,7 +404,8 @@
                         <li><a href="https://www.canada.ca/en/canadian-heritage.html">Canadian Heritage</a></li>
                     </ul>
                 </section>
-    <mark>AIA rescue link is for demonstration purposes only, ignore misalignment of elements</mark>
+    <mark>AIA rescue link is for demonstration purposes only, ignore misalignment of elements</mark><br>
+    <mark>Ignore text/layout changes in banner itself</mark>
                 <div class="clearfix"></div>
                                 <section class="aia-rescue mrgn-tp-xl">
 					<h3 class="wb-inv">AI answers banner</h3>
