--- a/jmtesting/ai-answers/ai-launch-sticky-bttm-band-with-rescue.html
+++ b/jmtesting/ai-answers/ai-launch-sticky-bttm-band-with-rescue.html
@@ -405,7 +405,7 @@
                     </ul>
                 </section>
     <mark>AIA rescue link is for demonstration purposes only, ignore misalignment of elements</mark><br>
-    <mark>Ignore text/layout changes in banner itself</mark>
+    <mark>Ignore all text/layout/etc. changes in banner itself. Stays exactly as is with the PP thematic now except sticks to bottom.</mark>
                 <div class="clearfix"></div>
                                 <section class="aia-rescue mrgn-tp-xl">
 					<h3 class="wb-inv">AI answers banner</h3>
