--- a/jmtesting/layered-theme-refinement/ly-ircc-v4.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v4.html
@@ -271,7 +271,7 @@
 		<div class="well white-well mrgn-tp-lg">
 			<div class="row">
 				<div class="col-xs-12 col-sm-11">
-					<h3 class="mrgn-tp-0 h6">Not sure where to start?</h3>
+					<h3 class="mrgn-tp-sm" style="font-size:20px;">Not sure where to start?</h3>
 					<section class="gc-srvinfo">
 						<p><a href="https://ircc.canada.ca/explore-programs/index.asp">Answer a few questions and explore all immigration programs</a></p>
 					</section>
