--- a/jmtesting/layered-theme-refinement/ly-ircc-v4.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v4.html
@@ -268,13 +268,11 @@
 			box-shadow: 2px 4px 10px rgba(0, 0, 0, .3);
 		}
 	</style>
-		<div class="well white-well mrgn-tp-lg">
+		<div class="well white-well mrgn-tp-lg pl-4">
 			<div class="row">
 				<div class="col-xs-12 col-sm-11">
 					<h3 class="mrgn-tp-sm" style="font-size:20px;">Not sure where to start?</h3>
-					<section class="gc-srvinfo">
-						<p><a href="https://ircc.canada.ca/explore-programs/index.asp">Answer a few questions and explore all immigration programs</a></p>
-					</section>
+						<p style="font-size: 18px;"><a href="https://ircc.canada.ca/explore-programs/index.asp">Answer a few questions and explore all immigration programs</a></p>
 				</div>
 			</div>
 		</div>
